fix: header overlap when mobile menu is expanded

--- a/packages/frontend/src/assets/styles/index.css
+++ b/packages/frontend/src/assets/styles/index.css
@@ -21,50 +21,12 @@
   --at-apply: ease-in-out duration-150 transition-property-[opacity,background-color];
 }
 
-header.scroll > div:first-child {
-  --at-apply: bg-page md:bg-white/90 md:backdrop-blur-md;
-  box-shadow: 0 0.375rem 1.5rem 0 rgb(140 152 164 / 13%);
-}
-
-.dark header.scroll > div:first-child,
-header.scroll.dark > div:first-child {
-  --at-apply: bg-page md:bg-[#030621e6] border-b border-gray-500/20;
-  box-shadow: none;
-}
-
-header.expanded nav {
-  position: fixed;
-  top: 70px;
-  left: 0;
-  right: 0;
-  bottom: 70px !important;
-  padding: 0 5px;
-}
-
-.dropdown:focus .dropdown-menu,
-.dropdown:focus-within .dropdown-menu,
-.dropdown:hover .dropdown-menu {
-  --at-apply: block;
-}
-
 [astro-icon].icon-light > * {
   stroke-width: 1.2;
 }
 
 [astro-icon].icon-bold > * {
   stroke-width: 2.4;
-}
-
-[data-aw-toggle-menu] path {
-  --at-apply: transition;
-}
-
-[data-aw-toggle-menu].expanded g > path:first-child {
-  --at-apply: -rotate-45 translate-y-[15px] translate-x-[-3px];
-}
-
-[data-aw-toggle-menu].expanded g > path:last-child {
-  --at-apply: rotate-45 translate-y-[-8px] translate-x-[14px];
 }
 
 [readonly],
